Migrate MoniCopy to Compose Desktop with a CMP-style commonMain/jvmMain split